--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
@@ -21,6 +23,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.145",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
