--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
